--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ pagination_type: default  # values [ ops, default ]
 more_vert:
   option1:
     name: WangZhiLue's Blog
-    link: hahahh0.github.io
+    link: https://hahahh0.github.io/
   option2:
     name: P_Wang's Blog
-    link: tle666.github.io
+    link: https://tle666.github.io/
   option3:
     name: Acf's Blog
-    link: acfunction.github.io
+    link: https://acfunction.github.io/
   option4:
     name: a dalao in luogu
     link: https://www.luogu.org/space/show?uid=65542
