--- a/_config.yml
+++ b/_config.yml
@@ -34,22 +34,22 @@ more_vert:
     link: https://www.luogu.org/blog/TonyBrown148/
   option5:
     name: Useful button
-    link: tonybrown148.github.io
+    link: https://tonybrown148.github.io/
   option6:
     name: Useful Button 2
-    link: tonybrown148.github.io
+    link: https://tonybrown148.github.io/
   option7:
     name: Useful Button 3
-    link: tonybrown148.github.io
+    link: https://tonybrown148.github.io/
   option8:
     name: Useful Button 4
-    link: tonybrown148.github.io
+    link: https://tonybrown148.github.io/
   option9:
     name: How many useful buttons are there?
-    link: tonybrown148.github.io
+    link: https://tonybrown148.github.io/
   option10:
     name: Oh, never mind.
-    link: tonybrown148.github.io
+    link: https://tonybrown148.github.io/
 
 disqus: true
 disqus_shortname: 'gdgmanagua'
